# bash_runner

./: CMakeLists.txt  bash_runer.pro  settings.conf  ui_widget.h  widget.cpp  widget.h  widget.ui
untitled/: untitled.pro
